Fix scrollbar style

--- a/frontend/src/styles/cards.scss
+++ b/frontend/src/styles/cards.scss
@@ -263,7 +263,7 @@
 
 .save-button-card:active {
   padding: 11px;
-  background-color: #3067cc;
+  background-color: #3b77e7;
   border: solid 1px #113579;
 }
 
